core module lecture -6
use - database connect kai liy code processing api call file system kai it call core module
           yai hamari file mai pahlai sai hi banai hotai h'
       ex - console.log()  //its core module
      ex - fs,Buffer,HTTP      
     difference bttween global and non - global
    global vo hota jinko import karnai ki jarurath nahi hoti
    ex- console.log 


 lecture - 7
 create serve
 use http server
 handle request and response on server   

lecture - 8
package.json
//install command 
//frist - npm init

lecture 9 - make .gitignore file

lecture 10 - install nodemon command => npm i nodemon
             run command - nodemon .\index.js
             
 lecture -11 make simple api 
   create server bananai kai badh response ka type difine kaigai 
   resp.writeHead(200,{'Content-Type':'application\json'})           
    
   fir data.js sai datako import karigai 
   const data = require('./data')

   or use response ko likaigai json data object ko string mai convert karigai
   resp.write(JSON.stringify(data))

localHost per print kargai - .listen(4500) 


lecture - 12  heading - Getting input from comman line

step - 1 understanding process command and process.argv command
 //console.log(process)
//process ek object hota h jskai ander node js ka almost sab hota
//property ko access karo
console.log(process.argv)
 //argv means = argunment vector
//he give two response frist
//frist jaha hamari file save /install h vo
//second jaha sai hum isko run kar rahai vo ya file run kar rahai h
//iskai badh jo bhi hum input likhtai vo hami mil jata h
//ex - node .\index.js hello
//result frist - install, second - file run path thrid- argunment ----

//target - 
console.log(process.argv[2])
//command run - node .\index.js hello mohit
//result - hello

